# apps/api/openapi.json
@@ -772,6 +772,31 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "language_speak",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "email_verified",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "default": false,
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "password",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -1217,6 +1242,14 @@
             }
           },
           {
+            "name": "word",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "catalog",
             "required": false,
             "in": "query",
@@ -1227,6 +1260,30 @@
           },
           {
             "name": "language",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "audio",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "transcribtion",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meaning",
             "required": false,
             "in": "query",
             "schema": {
@@ -1563,19 +1620,43 @@
       }
     },
     "/auth/verify-email": {
-      "get": {
+      "post": {
         "operationId": "AuthController_sendVerificationEmail",
-        "parameters": [
-          {
-            "name": "token",
-            "required": true,
-            "in": "query",
-            "description": "Email verification token",
-            "schema": {
-              "type": "string"
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostVerifyEmailRequestDto"
+              }
             }
           }
-        ],
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "auth"
+        ]
+      }
+    },
+    "/auth/verify-email/resend": {
+      "post": {
+        "operationId": "AuthController_resendVerificationEmail",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostVerifyEmailResendRequestDto"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": ""
@@ -2317,13 +2398,24 @@
           },
           "name": {
             "type": "string"
+          },
+          "language_speak": {
+            "type": "string"
+          },
+          "email_verified": {
+            "type": "boolean",
+            "default": false
+          },
+          "password": {
+            "type": "string"
           }
         },
         "required": [
           "id",
           "created_at",
           "email",
-          "name"
+          "name",
+          "language_speak"
         ]
       },
       "GetUserResponseDto": {
@@ -2368,12 +2460,27 @@
           },
           "name": {
             "type": "string"
+          },
+          "language_speak": {
+            "type": "string"
+          },
+          "email_verified": {
+            "type": "boolean",
+            "default": false
+          },
+          "password": {
+            "type": "string"
+          },
+          "language_learn": {
+            "type": "string"
           }
         },
         "required": [
           "created_at",
           "email",
-          "name"
+          "name",
+          "language_speak",
+          "language_learn"
         ]
       },
       "PostUserResponseDto": {
@@ -2392,13 +2499,24 @@
           },
           "name": {
             "type": "string"
+          },
+          "language_speak": {
+            "type": "string"
+          },
+          "email_verified": {
+            "type": "boolean",
+            "default": false
+          },
+          "password": {
+            "type": "string"
           }
         },
         "required": [
           "id",
           "created_at",
           "email",
-          "name"
+          "name",
+          "language_speak"
         ]
       },
       "PutUserRequestDto": {
@@ -2416,6 +2534,16 @@
             "type": "string"
           },
           "name": {
+            "type": "string"
+          },
+          "language_speak": {
+            "type": "string"
+          },
+          "email_verified": {
+            "type": "boolean",
+            "default": false
+          },
+          "password": {
             "type": "string"
           }
         }
@@ -2436,13 +2564,24 @@
           },
           "name": {
             "type": "string"
+          },
+          "language_speak": {
+            "type": "string"
+          },
+          "email_verified": {
+            "type": "boolean",
+            "default": false
+          },
+          "password": {
+            "type": "string"
           }
         },
         "required": [
           "id",
           "created_at",
           "email",
-          "name"
+          "name",
+          "language_speak"
         ]
       },
       "DeleteUserResponseDto": {
@@ -2687,11 +2826,23 @@
             "type": "string",
             "format": "int64"
           },
+          "word": {
+            "type": "string"
+          },
           "catalog": {
             "type": "string",
             "format": "int64"
           },
           "language": {
+            "type": "string"
+          },
+          "audio": {
+            "type": "string"
+          },
+          "transcribtion": {
+            "type": "string"
+          },
+          "meaning": {
             "type": "string"
           },
           "topicData": {
@@ -2705,8 +2856,11 @@
           "id",
           "created_at",
           "topic",
+          "word",
           "catalog",
           "language",
+          "audio",
+          "transcribtion",
           "topicData",
           "catalogData"
         ]
@@ -2752,19 +2906,34 @@
             "type": "string",
             "format": "int64"
           },
+          "word": {
+            "type": "string"
+          },
           "catalog": {
             "type": "string",
             "format": "int64"
           },
           "language": {
             "type": "string"
+          },
+          "audio": {
+            "type": "string"
+          },
+          "transcribtion": {
+            "type": "string"
+          },
+          "meaning": {
+            "type": "string"
           }
         },
         "required": [
           "created_at",
           "topic",
+          "word",
           "catalog",
-          "language"
+          "language",
+          "audio",
+          "transcribtion"
         ]
       },
       "PostWordResponseDto": {
@@ -2782,11 +2951,23 @@
             "type": "string",
             "format": "int64"
           },
+          "word": {
+            "type": "string"
+          },
           "catalog": {
             "type": "string",
             "format": "int64"
           },
           "language": {
+            "type": "string"
+          },
+          "audio": {
+            "type": "string"
+          },
+          "transcribtion": {
+            "type": "string"
+          },
+          "meaning": {
             "type": "string"
           }
         },
@@ -2794,8 +2975,11 @@
           "id",
           "created_at",
           "topic",
+          "word",
           "catalog",
-          "language"
+          "language",
+          "audio",
+          "transcribtion"
         ]
       },
       "PutWordRequestDto": {
@@ -2813,11 +2997,23 @@
             "type": "string",
             "format": "int64"
           },
+          "word": {
+            "type": "string"
+          },
           "catalog": {
             "type": "string",
             "format": "int64"
           },
           "language": {
+            "type": "string"
+          },
+          "audio": {
+            "type": "string"
+          },
+          "transcribtion": {
+            "type": "string"
+          },
+          "meaning": {
             "type": "string"
           }
         }
@@ -2837,11 +3033,23 @@
             "type": "string",
             "format": "int64"
           },
+          "word": {
+            "type": "string"
+          },
           "catalog": {
             "type": "string",
             "format": "int64"
           },
           "language": {
+            "type": "string"
+          },
+          "audio": {
+            "type": "string"
+          },
+          "transcribtion": {
+            "type": "string"
+          },
+          "meaning": {
             "type": "string"
           }
         },
@@ -2849,8 +3057,11 @@
           "id",
           "created_at",
           "topic",
+          "word",
           "catalog",
-          "language"
+          "language",
+          "audio",
+          "transcribtion"
         ]
       },
       "DeleteWordResponseDto": {
@@ -3006,16 +3217,22 @@
           "name": {
             "type": "string"
           },
-          "password": {
+          "language_speak": {
             "type": "string",
-            "description": "User password",
-            "example": "Strong#Password123"
+            "description": "Language the user speaks",
+            "example": "en"
+          },
+          "language_learn": {
+            "type": "string",
+            "description": "Language the user is learning",
+            "example": "es"
           }
         },
         "required": [
           "email",
           "name",
-          "password"
+          "language_speak",
+          "language_learn"
         ]
       },
       "PutResetPasswordRequestDto": {
@@ -3034,6 +3251,35 @@
         "required": [
           "new_password",
           "token"
+        ]
+      },
+      "PostVerifyEmailRequestDto": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "description": "Email verification code"
+          },
+          "email": {
+            "type": "string",
+            "description": "User email"
+          }
+        },
+        "required": [
+          "code",
+          "email"
+        ]
+      },
+      "PostVerifyEmailResendRequestDto": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User email"
+          }
+        },
+        "required": [
+          "email"
         ]
       },
       "PostRefreshTokenRequestDto": {
