# packages/types/src/api/auth/verify-email/resend/post.ts
@@ -1,0 +1,4 @@
+import { paths } from "../../../../api";
+
+export type PostAuthByVerifyEmailByResendResponse =
+	paths["/auth/verify-email/resend"]["post"]["responses"]["200"]["content"]["application/json"];
